--- a/html/lesson_plans/seacole_decentering_britishness.html
+++ b/html/lesson_plans/seacole_decentering_britishness.html
@@ -200,7 +200,7 @@
 
 							<p>Banerjee, Sukanya. 2018. “<a href="https://doi.org/10.1017/S1060150318001195">Transimperial</a>.” <em>Victorian Literature and Culture</em> 46: 925–27.</p>
 
-							<p>Gilroy, Paul. 1995. <em>The Black Atlantic: Modernity and Double Consciousness</em>. Cambridge: Harvard UP.</p>
+							<p>Gilroy, Paul. 1995. <em>The Black Atlantic: Modernity and Double Consciousness</em>. Cambridge: Harvard University Press.</p>
 							
 							<p>Olusoga, David. 2016. <em>Black and British: A Forgotten History</em>. London: Pan Books.</p>
             </section>
