--- a/html/lesson_plans/seacole_decolonizing_heathcare.html
+++ b/html/lesson_plans/seacole_decolonizing_heathcare.html
@@ -162,7 +162,7 @@
             <section aria-labelledby="materials-1">
               <h4 id="materials-1">Nineteenth-/Early Twentieth-Century Materials</h4>
 
-							<p>Nightingale, Florence. (1860) n.d. <em><a href="https://digital.library.upenn.edu/women/nightingale/nursing/nursing.html">Notes on Nursing</a>.</em> Digital Library University of Pennsylvania, n.d.</p>
+							<p>Nightingale, Florence. (1860) n.d. <em><a href="https://digital.library.upenn.edu/women/nightingale/nursing/nursing.html">Notes on Nursing</a>.</em> Digital Library, University of Pennsylvania, n.d.</p>
 
 							<p>Seacole, Mary. (1860) n.d. <em><a href="https://digital.library.upenn.edu/women/seacole/adventures/adventures.html">Wonderful Adventures of Mrs. Seacole in Many Lands</a></em>. Digital Library University of Pennsylvania.</p>
             </section>
@@ -216,7 +216,7 @@
 
 							<p><em>BBC News</em>. 2016. “<a href="https://www.bbc.com/news/uk-england-london-36663206">Mary Seacole Statue Unveiled in London</a>,” June 30, 2016.</p>
 
-							<p>Dean, Erin. 2017. “<a href="http://dx.doi.org.ezproxy.library.yorku.ca/10.7748/ns.32.6.22.s23">A Legacy of Inclusion for Future Generations</a>.” <em>Nursing Standard (2014+)</em> 32 (6): 22.</p>
+							<p>Dean, Erin. 2017. “<a href="http://doi.org/10.7748/ns.32.6.22.s23">A Legacy of Inclusion for Future Generations</a>.” <em>Nursing Standard</em> 32 (6): 22.</p>
 							
 							<p>Gunning, Sandra. 2001. “<a href="http://www.jstor.org/stable/3175353">Traveling with Her Mother’s Tastes: The Negotiation of Gender, Race, and Location in ‘Wonderful Adventures of Mrs. Seacole in Many Lands.’</a>” <em>Signs</em> 26 (4): 949–81.</p>
 
