--- a/html/lesson_plans/africa_dramatic_monologue.html
+++ b/html/lesson_plans/africa_dramatic_monologue.html
@@ -244,7 +244,7 @@
 
 								<p>Blake, William. “<a href="https://www.poetryfoundation.org/poems/43671/the-little-black-boy">The Little Black Boy</a>.” 1789. <em>Poetry Foundation</em>, n.d.</p>
 
-								<p>---. “<a href="http://www.blakearchive.org/search/?search=The%20Little%20Black%20Boy">The Little Black Boy Illustrated Plates</a>.” 2021. <em>Blake Archive</em>.</p>
+								<p>---. “<a href="http://www.blakearchive.org/search/?search=The%20Little%20Black%20Boy">The Little Black Boy Illustrated Plates</a>.” <em>Blake Archive</em>, 2021.</p>
 							</section>
 
 							<section aria-labelledby="secondary-4">
@@ -281,7 +281,7 @@
 
 								<p>Bennett-Coverley, Louise. 1966. “<a href="https://www.best-poems.net/louise-bennett-coverley/colonization-in-reverse.html">Colonization in Reverse</a>.” <em>Best Poems</em>, n.d.</p>
 
-								<p>McKay, Claude. “Quashie and Buccra.” 1912. <a href="https://scalar.lehigh.edu/mckay/quashie-to-buccra-1?path=songs-of-jamaica-1912">Songs of Jamaica</a>, edited by Amardeep Singh, A Digital Collection, Lehigh University, 2017.</p>
+								<p>McKay, Claude. “<a href="https://scalar.lehigh.edu/mckay/quashie-to-buccra-1?path=songs-of-jamaica-1912">Quashie and Buccra</a>.” 1912. <em>Songs of Jamaica (1912): Digital Edition</em>, edited by Amardeep Singh, Lehigh University, 2017.</p>
 							</section>
 
 							<section aria-labelledby="secondary-5">
@@ -295,7 +295,7 @@
 
 								<p>James, Winston. “<a href="https://doi.org/10.1353/smx.2003.0009">Becoming the People’s Poet: Claude McKay’s Jamaican Years, 1889-1912</a>.” <em>Small Axe</em>, vol. 7, no. 1, Mar. 2003, pp. 17–45.</p>
 
-								<p>Jekyll, Walter. “<a href="https://scalar.lehigh.edu/mckay/preface-to-songs-of-jamaica-1912">Preface to ‘Songs of Jamaica’ (1912)</a>.” 1912. <em>Songs of Jamaica</em>, edited by Amardeep Singh, A Digital Collection, Lehigh University, 2017.</p>
+								<p>Jekyll, Walter. “<a href="https://scalar.lehigh.edu/mckay/preface-to-songs-of-jamaica-1912">Preface to ‘Songs of Jamaica’ (1912)</a>.” 1912. <em>Songs of Jamaica (1912): Digital Edition</em>, edited by Amardeep Singh, Lehigh University, 2017.</p>
 
 								<p>Rodis, Katherine Verhagen. “<a href="https://www.jstor.org/stable/23019904?seq=1">Vernacular Literacy and Formal Analysis: Louise Bennett-Coverley’s Jamaican English Verse</a>.” <em>Journal of West Indian Literature</em>, vol. 18, no. 1, 2009, pp. 60–72.</p>
 							</section>
