--- a/html/lesson_plans/africa_southern_africa.html
+++ b/html/lesson_plans/africa_southern_africa.html
@@ -106,17 +106,17 @@
             <section aria-labelledby="materials-1">
               <h4 id="materials-1">Thomas Pringle</h4>
 
-							<p>“<a href="https://www.gutenberg.org/files/52928/52928-h/52928-h.htm#page_25">Song of the Wild Bushman</a>.” (1825) 1887. The Poetry of South Africa, edited by A. Wilmot, <em>Gutenberg</em>, n.d., pp. 25–31<br/>
+							<p>“<a href="https://www.gutenberg.org/files/52928/52928-h/52928-h.htm#page_25">Song of the Wild Bushman</a>.” (1825) 1887. <em>The Poetry of South Africa</em>, edited by A. Wilmot, <em>Gutenberg</em>, 2016, pp. 25–31<br/>
 
 							“<a href="https://archive.org/details/poeticalworksoft00prin/page/58/mode/2up">The Slave Dealer</a>.” <em>The Poetical Works of Thomas Pringle</em>, by Thomas Pringle, Edward Moxon, 1828, pp. 58–59.<br/>
 
-							“<a href="http://www.gutenberg.org/files/52928/52928-h/52928-h.htm#page_36">The Kosa</a>.” (1828) 1887. <em>The Poetry of South Africa</em>, edited by A. Wilmot, <em>Gutenberg</em>, n.d., pp. 36–37.<br/>
+							“<a href="http://www.gutenberg.org/files/52928/52928-h/52928-h.htm#page_36">The Kosa</a>.” (1828) 1887. <em>The Poetry of South Africa</em>, edited by A. Wilmot, <em>Gutenberg</em>, 2016, pp. 36–37.<br/>
 
-							“<a href="https://www.gutenberg.org/files/52928/52928-h/52928-h.htm#page_4">The Bechuana Boy</a>.” (1830) 1887. <em>The Poetry of South Africa</em>, edited by A. Wilmot, <em>Gutenberg</em>, n.d., pp. 4–9.<br/>
+							“<a href="https://www.gutenberg.org/files/52928/52928-h/52928-h.htm#page_4">The Bechuana Boy</a>.” (1830) 1887. <em>The Poetry of South Africa</em>, edited by A. Wilmot, <em>Gutenberg</em>, 2016, pp. 4–9.<br/>
 								<span class="annotation">One of the original 1820 Cape Colony settlers, Pringle became an influential publisher before returning to Britain because of censorship disputes with the local administration. He was a prominent abolitionist and the editor of <em>The History of Mary Prince</em> (1831), the first slave narrative by a Black woman published in Britain. In addition to writing poetry that was overtly anti-slavery (as in “The Slave Dealer” and “The Bechuana Boy”), Pringle also wrote poetry describing Africans on their native lands (“Song of the Wild Bushman” and “The Kosa”).</span>
 							</p>
 
-							<p><a href="https://www.google.com/books/edition/Narrative_of_a_Residence_in_South_Africa/veoxAQAAMAAJ?hl=en&gbpv=1&printsec=frontcover"><em>Narrative of a Residence in South Africa</em></a>. 1834. New ed., Tegg, 1851. <a href="Also available from https://archive.org/details/narrativearesid00condgoog/page/n6/mode/2up">Alternate version</a>.<br/>
+							<p><a href="https://www.google.com/books/edition/Narrative_of_a_Residence_in_South_Africa/veoxAQAAMAAJ?hl=en&gbpv=1&printsec=frontcover"><em>Narrative of a Residence in South Africa</em></a>. 1834. New ed., Tegg, 1851. <a href="https://archive.org/details/narrativearesid00condgoog/page/n6/mode/2up">Alternate version</a>.<br/>
 								<span class="annotation">Pringle’s first-hand account offers insight into settler colonial life.</span>
 							</p>
             </section>
@@ -136,7 +136,7 @@
 								<span class="annotation">This short piece illustrates the change in Schreiner’s attitude towards Black South Africans since her writing of <em>The Story of an African Farm</em>, in which Black characters are a mere backdrop to settler colonial life. Having resigned from the South African Women’s Enfranchisement League because it had decided not to advocate for Black women, Schreiner here argues for the enfranchisement of Black Africans.</span>
 							</p>
 
-							<p>“<a href="https://webapp1.dlib.indiana.edu/vwwp/view?docId=VAB7150;chunk.id=d1e521;toc.depth=1;toc.id=d1e521;brand=vwwp;doc.view=0;query=">Eighteen-Nintey-Nine</a>.” <em>Stories, Dreams, and Allegories</em>, Unwin, 1923. Stories, Dreams, and Allegories, Victorian Women Writers Project, n.d.<br/>
+							<p>“<a href="https://webapp1.dlib.indiana.edu/vwwp/view?docId=VAB7150;chunk.id=d1e521;toc.depth=1;toc.id=d1e521;brand=vwwp;doc.view=0;query=">Eighteen-Nintey-Nine</a>.” 1923. <em>Stories, Dreams, and Allegories</em>, <em>Victorian Women Writers Project</em>, 2021<br/>
 								<span class="annotation">Focused on a Boer mother who sees all her sons go off to war, this short story offers a sympathetic, even romanticized, view of the Boers, in stark contrast to <em>The Story of an African Farm</em>.</span>
 							</p>
             </section>
@@ -149,7 +149,7 @@
 							</p>
 
 							<p><a href="http://www.gutenberg.org/ebooks/8184"><em>The Ghost Kings</em></a>. 1908. <em>Gutenberg</em>, 2005.<br/>
-								<span class="annotation">This female colonial romance depicts settler female heroism in southern Africa in the leadup to the Great Trek (the migration of approximately ten thousand Boers inland from the Cape in the 1830s and ’40s). It is particularly interesting for its portrayal of mystical feminism—protective supernatural powers facilitated by female bonds across cultures—and female authority, as well as its blending of history and romance. (On the female colonial romance and mystical feminism, see Melissa Free, “‘It Is I Who Have the Power’: The Female Colonial Romance,” <a href="https://www.sunypress.edu/p-6981-beyond-gold-and-diamonds.aspx"><em>Beyond Gold and Diamonds: Genre, the Authorial Informant, and the British South African Novel</em></a>, State University of New York Press, 2021, pp. 61-105.)</span>
+								<span class="annotation">This female colonial romance depicts female settler  heroism in southern Africa in the leadup to the Great Trek (the migration of approximately ten thousand Boers inland from the Cape in the 1830s and ’40s). It is particularly interesting for its portrayal of mystical feminism—protective supernatural powers facilitated by female bonds across cultures—and female authority, as well as its blending of history and romance. (On the female colonial romance and mystical feminism, see Melissa Free, “‘It Is I Who Have the Power’: The Female Colonial Romance,” <a href="https://www.sunypress.edu/p-6981-beyond-gold-and-diamonds.aspx"><em>Beyond Gold and Diamonds: Genre, the Authorial Informant, and the British South African Novel</em></a>, State University of New York Press, 2021, pp. 61-105.)</span>
 							</p>
             </section>
 
@@ -164,8 +164,8 @@
 						<section aria-labelledby="materials-5">
               <h4 id="materials-5">R. R. R. Dhlomo</h4>
 
-							<p><em>African Tragedy, An</em>. Lovedale, 1928.<br/>
-								<span class="annotation">In the first novella in English by a Black South African, Dhlomo describes the dangers of town life for Black Africans. Leaving his village teaching job, the Zulu protagonist moves to Johannesburg to earn enough money to marry the woman he loves. He falls under the influence of drink and gambling, has sexual relationships with married women, gives his own wife a venereal disease—and as a result the child she soon births—and is ultimately murdered. The story, which has clear Christian overtones, ends with the man’s deathbed confession.</span>
+							<p><em>An African Tragedy</em>. Lovedale, 1928.<br/>
+								<span class="annotation">In the first novella in English by a Black South African, Dhlomo describes the dangers of city life for Black Africans. Leaving his village teaching job, the Zulu protagonist moves to Johannesburg to earn enough money to marry the woman he loves. He falls under the influence of drink and gambling, has sexual relationships with married women, gives his own wife a venereal disease—and as a result the child she soon births—and is ultimately murdered. The story, which has clear Christian overtones, ends with the man’s deathbed confession.</span>
 							</p>
             </section>
 
@@ -176,7 +176,7 @@
 								<span class="annotation">Passed just three years after the formation of the Union of South Africa, which did not guarantee voting rights to Black Africans, the 1913 Natives Land Act dispossessed them of almost all of their land. This trenchant critique is written by the founding secretary of what would become the African National Congress.</span>
 							</p>
 
-							<p><em>Mhudi</em>. 1930. Waveland, 2013.<br/>
+							<p><em>Mhudi</em>. Lovedale Press, 1930.<br/>
 								<span class="annotation">The first novel in English by a Black South African, <em>Mhudi</em> was written in the late 1910s and early ’20s, though not published until 1930, as Plaatje struggled to find a publisher. It is self-consciously hybrid, using both African idiom and the English language; orality and the novel form; African storytelling techniques, such as songs, gossip, anecdotes, folktales, and proverbs, and European literary genres, like the epic and the romance. The influence of the female colonial romance is manifest most ostensibly in its courageous heroine who “thrice face[s] the king of beasts [a lion] and [ultimately] kill[s] one with her own hand” (47). Set during the <em>Mfecane</em> (the period of indigenous wars and power struggles that took place between roughly 1815 and 1840) and the Great Trek (the north- and eastward migration of approximately ten thousand Boers seeking to escape the reach of British authority, which took place in the 1830s and ’40s), <em>Mhudi</em> depicts warfare between the Matabele and other Black African peoples, as well as cross-ethnic, cross-racial, and cross-cultural alliances.</span>
 							</p>
             </section>
