--- a/html/lesson_plans/seacole_recentering_nursing.html
+++ b/html/lesson_plans/seacole_recentering_nursing.html
@@ -174,7 +174,7 @@
               
               <p>Taylor, Susie King. (1902) 1999. <em><a href="https://docsouth.unc.edu/neh/taylorsu/taylorsu.html">Reminiscences of My Life in Camp with the 33rd United States Colored Troops, Late 1st S.C. Volunteers</a></em>. University of North Carolina at Chapel Hill: <em>Documenting the American South</em>.</p>
               
-              <p>Tennyson, Alfred. (1855) 1893. <a href="https://archive.org/details/MaudAMonodramaByAlfredLordTennyson/mode/2up"><em>Maud: A Monodrama</em></a>. Kelmscott Press Ed. London: Macmillan &amp; Co. <em>Note: The unnamed male narrator enlists in the Crimean War in Part III.</em></p>              
+              <p>Tennyson, Alfred. (1855) 1893. <a href="https://archive.org/details/MaudAMonodramaByAlfredLordTennyson/mode/2up"><em>Maud: A Monodrama</em></a>. London: Macmillan &amp; Co. <em>Note: The unnamed male narrator enlists in the Crimean War in Part III.</em></p>              
             </section>
 
             <section aria-labelledby="materials-2">
