update dev pages

--- a/0_dev/page-templates/0_zoomcast-template.html
+++ b/0_dev/page-templates/0_zoomcast-template.html
@@ -67,8 +67,8 @@
 						<h3 id="zoomcast-production-details">Zoomcast Production Details</h3>
 						<div class="specs-container">
 							<p id="text"><strong>Speakers:</strong>  (guest),  (host)</p><!-- Change -->
-							<p><strong>Date:</strong> </p><!-- Change -->
 							<p><strong>Length:</strong> </p><!-- Change -->
+							<p><strong>Zoomcast Date:</strong> </p><!-- Change -->
 							<p><strong>Zoomcast Series:</strong> </p><!-- Change -->
 							<p><strong>Full Zoomcast Transcript (Download):</strong> &nbsp;<a href="/pdf/zoomcasts/.pdf" title="This link opens a PDF document.">PDF</a> &nbsp;|&nbsp; <a href="/pdf/zoomcasts/.docx"  title="This link opens a Word document.">Word</a></p><!-- Change -->
 						</div>
