--- a/0_dev/page-templates/0_syllabus-template.html
+++ b/0_dev/page-templates/0_syllabus-template.html
@@ -60,15 +60,17 @@
 						<h3 id="syllabus-specs">Syllabus Production Details</h3>
 
 						<div class="specs-container">
-							<p><strong>Developer:</strong>  <a href="mailto:?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Email"></i></a></p><!-- Change -->
+							<p><strong>Developer:</strong>  <a class="mail" href="mailto:?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Contact"></i> <span>Contact</span></a></p><!-- Change -->
 
 							<p><strong>Peer Reviewer:</strong> </p><!-- Change -->
 							
-							<p><strong>Syllabus Cluster Developer:</strong> <a href="mailto:?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Email"></i></a></p><!-- Change -->
+							<p><strong>Syllabus Cluster Developer:</strong> <a class="mail" href="mailto:?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Contact"></i> <span>Contact</span></a></p><!-- Change -->
 
 							<p><strong>Cluster Title:</strong> </p><!-- Change -->
 
 							<p><strong>Peer-Reviewed Syllabus (Download):</strong> &nbsp;<a href="/pdf/syllabi/.pdf" title="This link opens a PDF document.">PDF</a> &nbsp;|&nbsp; <a href="/pdf/.docx"  title="This link opens a Word document.">Word</a></p><!-- Change -->
+
+							<p><strong>Publication Date:</strong> 2021</p>
 						</div>
 					</section>
 
