update html for mail and pub date

--- a/html/lesson_plans/africa_diaspora_empire_introduction.html
+++ b/html/lesson_plans/africa_diaspora_empire_introduction.html
@@ -60,7 +60,7 @@
 						<h3 id="details">Lesson Plan Cluster Production Details</h3>
 
 						<div class="specs-container">
-							<p><strong>Cluster Developer:</strong> Sophia Hsu <a href="mailto:sophia.hsu@lehman.cuny.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Email"></i></a></p>
+							<p><strong>Cluster Developer:</strong> Sophia Hsu <a class="mail" href="mailto:sophia.hsu@lehman.cuny.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Contact"></i> <span>Contact</span></a></p>
 
 							<p><strong>Lesson Plan Developers:</strong>  Carolyn Betensky, Melissa Free, Cherrie Kwok, Ji Eun Lee</p>
 
@@ -75,6 +75,8 @@
 									<li><a href="/html/lesson_plans/africa_slavery_theories.html">Slavery and Theories of Sexuality, Desire, and Family</a></li>
 								</ol>
 							</div>
+
+              <p><strong>Publication Date:</strong> 2021</p>
 						</div>
 					</section>
 
