--- a/html/lesson_plans/africa_ethiopianism.html
+++ b/html/lesson_plans/africa_ethiopianism.html
@@ -60,13 +60,15 @@
 						<h3 id="lesson-plan-specs">Lesson Plan Production Details</h3>
 
 						<div class="specs-container">
-							<p><strong>Developer:</strong> Melissa Free <a href="mailto:mmfree@asu.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Email"></i></a></p>
+							<p><strong>Developer:</strong> Melissa Free <a class="mail" href="mailto:mmfree@asu.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Contact"></i> <span>Contact</span></a></p>
 
 							<p><strong>Collaborating Peer Reviewers:</strong> Carolyn Betensky, Cherrie Kwok, Ji Eun Lee</p>
 							
-							<p><strong>Lesson Plan Cluster Developer:</strong> Sophia Hsu <a href="mailto:sophia.hsu@lehman.cuny.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Email"></i></a></p>
+							<p><strong>Lesson Plan Cluster Developer:</strong> Sophia Hsu <a class="mail" href="mailto:sophia.hsu@lehman.cuny.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Contact"></i> <span>Contact</span></a></p>
 
 							<p><strong>Cluster Title:</strong> Africa, Diaspora, and the British Empire</p>
+
+              <p><strong>Publication Date:</strong> 2021</p>
 						</div>
 					</section>
 
