--- a/html/lesson_plans/seacole_caribbean_introduction.html
+++ b/html/lesson_plans/seacole_caribbean_introduction.html
@@ -61,7 +61,7 @@
 						<h3 id="details">Lesson Plan Cluster Production Details</h3>
 
 						<div class="specs-container">
-							<p><strong>Cluster Developer:</strong> Adrian S. Wisnicki <a href="mailto:awisnicki@yahoo.com?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Email"></i></a></p>
+							<p><strong>Cluster Developer:</strong> Adrian S. Wisnicki <a class="mail" href="mailto:awisnicki@yahoo.com?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Contact"></i> <span>Contact</span></a></p>
 
 							<p><strong>Lesson Plan Developers:</strong>  Kira Braham, Heidi Kaufman, Indu Ohri, Breanna Simpson</p>
 
@@ -74,6 +74,8 @@
 									<li><a href="/html/lesson_plans/seacole_decolonizing_heathcare.html">Decolonizing Health(care)</a></li>
 								</ol>
 							</div>
+
+              <p><strong>Publication Date:</strong> 2021</p>
 						</div>
 					</section>
 
