--- a/html/lesson_plans/seacole_decentering_britishness.html
+++ b/html/lesson_plans/seacole_decentering_britishness.html
@@ -60,14 +60,16 @@
 						<h3 id="lesson-plan-specs">Lesson Plan Production Details</h3>
 
 						<div class="specs-container">
-							<p><strong>Developer:</strong> Kira Braham <a href="mailto:kira.braham@vanderbilt.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Email"></i></a></p>
+							<p><strong>Developer:</strong> Kira Braham <a class="mail" href="mailto:kira.braham@vanderbilt.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Email"></i> <span>Contact</span></a></p>
 
 							<p><strong>Collaborating Peer Reviewers:</strong> Heidi Kaufman, Indu Ohri, Breanna Simpson</p>
 							
-							<p><strong>Lesson Plan Cluster Developer:</strong> Adrian S. Wisnicki <a href="mailto:awisnicki@yahoo.com?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Email"></i></a></p>
+							<p><strong>Lesson Plan Cluster Developer:</strong> Adrian S. Wisnicki <a class="mail" href="mailto:awisnicki@yahoo.com?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Email"></i> <span>Contact</span></a></p>
 
 							<p><strong>Cluster Title:</strong> Mary Seacole and the Caribbean</p>
 
+              <p><strong>Publication Date:</strong> 2021</p>
+							
 							<p><strong>Note:</strong> This page uses the Chicago Author-Date citation format for all textual references. All references also appear in the <a href="/html/about/bibliography.html">project bibliograpy</a> using the MLA citation format.</p>
 						</div>
 					</section>
