--- a/html/syllabi/unsettling_victorian.html
+++ b/html/syllabi/unsettling_victorian.html
@@ -60,15 +60,17 @@
 						<h3 id="syllabus-specs">Syllabus Production Details</h3>
 
 						<div class="specs-container">
-							<p><strong>Developer:</strong> Margaret Linley <a href="mailto:mlinley@sfu.ca?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Email"></i></a></p>
+							<p><strong>Developer:</strong> Margaret Linley <a class="mail" href="mailto:mlinley@sfu.ca?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Contact"></i> <span>Contact</span></a></p>
 
 							<p><strong>Peer Reviewer:</strong> Elaine Freedgood</p>
 							
-							<p><strong>Syllabus Cluster Developer:</strong> Sophia Hsu <a href="mailto:sophia.hsu@lehman.cuny.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Email"></i></a></p>
+							<p><strong>Syllabus Cluster Developer:</strong> Sophia Hsu <a class="mail" href="mailto:sophia.hsu@lehman.cuny.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Contact"></i> <span>Contact</span></a></p>
 
 							<p><strong>Cluster Title:</strong> Recontextualizing the Victorians</p>
 
 							<!-- <p><strong>Peer-Reviewed Syllabus (Download):</strong> &nbsp;<a href="/pdf/syllabi/unsettling_victorian.pdf" title="This link opens a PDF document.">PDF</a> &nbsp;|&nbsp; <a href="/pdf/unsettling_victorian.docx"  title="This link opens a Word document.">Word</a></p> -->
+
+              <p><strong>Publication Date:</strong> 2021</p>
 						</div>
 					</section>
 
