--- a/html/zoomcasts/brice-hayward-reeder.html
+++ b/html/zoomcasts/brice-hayward-reeder.html
@@ -67,8 +67,8 @@
 					<h3 id="zoomcast-production-details">Zoomcast Production Details</h3>
 					<div class="specs-container">
 						<p id="text"><strong>Speakers:</strong> Michelle Prain Brice (guest), Jennifer Hayward (guest), and Jessie Reeder (guest), Ryan D. Fong (host)</p>
-						<p><strong>Date:</strong> February 25, 2021</p>
 						<p><strong>Length:</strong> 35:39</p>
+						<p><strong>Zoomcast Date:</strong> February 25, 2021</p>
 						<p><strong>Zoomcast Series:</strong> Beyond the Literary</p>
 						<p><strong>Full Zoomcast Transcript (Download):</strong> &nbsp;<a href="/pdf/zoomcasts/2021-02-25-Brice-et-al-transcript.pdf" title="This link opens a PDF document.">PDF</a> &nbsp;|&nbsp; <a href="/pdf/zoomcasts/2021-02-25-Brice-et-al-transcript.docx"  title="This link opens a Word document.">Word</a></p>
 					</div>
