--- a/html/zoomcasts/lootens.html
+++ b/html/zoomcasts/lootens.html
@@ -67,8 +67,8 @@
 						<h3 id="zoomcast-production-details">Zoomcast Production Details</h3>
 						<div class="specs-container">
 							<p id="text"><strong>Speakers:</strong> Tricia Lootens (guest), Pearl Chaozon Bauer (host)</p>
-							<p><strong>Date:</strong> January 29, 2021</p>
 							<p><strong>Length:</strong> 31:31</p>
+							<p><strong>Zoomcast Date:</strong> January 29, 2021</p>
 							<p><strong>Zoomcast Series:</strong> Positionality</p>
 							<p><strong>Full Zoomcast Transcript (Download):</strong> &nbsp;<a href="/pdf/zoomcasts/2021-01-29-Lootens-transcript.pdf" title="This link opens a PDF document.">PDF</a> &nbsp;|&nbsp; <a href="/pdf/zoomcasts/2021-01-29-Lootens-transcript.docx"  title="This link opens a Word document.">Word</a></p>
 						</div>
