--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 			// Hides fallback nav so that it only appears if Javascript disabled
 			function addStyle(styles){var css=document.createElement('style');if(css.styleSheet){css.styleSheet.cssText=styles}else{css.appendChild(document.createTextNode(styles))}document.getElementsByTagName("head")[0].appendChild(css)}var styles='nav#navFB{display:none !important;visibility:hidden !important}';window.onload=function(){addStyle(styles)};
 		</script>
+		<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-31768072-6"></script>
 		<script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments)}gtag('js',new Date());gtag('config','UA-31768072-6');</script>
 	</head>
@@ -150,9 +151,13 @@
 					</ul>
 				</section>
 
-				<section class="mailing-list">
-					<p>Join our mailing list or contribute to the project.</p>
-					<a class="contribute" href="https://docs.google.com/forms/d/1QLFgCD9dUenIr4VcOXE-Yg8PlM20d277wfCHojRzYuQ/edit">Get involved</a>
+				<section class="participate">
+					<p>Follow us, join our mailing list, or contribute to the project.</p>
+					<div>
+						<a class="follow" href="https://twitter.com/intent/follow?original_referer=http%3A%2F%2Flocalhost%3A8000%2F&ref_src=twsrc%5Etfw&region=follow_link&screen_name=UndiscVC&tw_p=followbutton"><i class="fab fa-twitter fa-fw" aria-hidden="true" title="Home"></i> Follow Us!</a>
+
+						<a class="contribute" href="https://docs.google.com/forms/d/1QLFgCD9dUenIr4VcOXE-Yg8PlM20d277wfCHojRzYuQ/edit">Mailing List / Get Involved</a>
+					</div>
 				</section>
 
 				<section class="smaller" aria-labelledby="site-code">
