--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 				<section class="participate">
 					<p>Follow us, join our mailing list, or contribute to the project.</p>
 					<div>
-						<a class="follow" href="https://twitter.com/intent/follow?screen_name=UndiscVC&tw_p=followbutton"><i class="fab fa-twitter fa-fw" aria-hidden="true" title="Twitter"></i> Follow Us!</a>
+						<a class="follow" href="https://twitter.com/intent/follow?screen_name=UndiscVC"><i class="fab fa-twitter fa-fw" aria-hidden="true" title="Twitter"></i> Follow Us!</a>
 
 						<!-- https://twitter.com/intent/follow?original_referer=http%3A%2F%2Flocalhost%3A8000%2F&ref_src=twsrc%5Etfw&region=follow_link&screen_name=UndiscVC&tw_p=followbutton" -->
 
