--- a/html/zoomcasts/aslami.html
+++ b/html/zoomcasts/aslami.html
@@ -86,7 +86,7 @@
 					
 					<summary aria-labelledby="overview">
 						<h3 id="overview">Zoomcast Overview</h3>
-						<p>Chaozon Bauer interviews Zarena Aslami, Associate Professor of 19th-Century British Litearture and Culture at Michigan State University.  Their conversation focuses around the importance of collaboration with regard to research projects, and, more importantly, on how best to support and serve not only their students but colleagues as well.  Aslami begins by sharing her experience as an insider/outsider, as a half-white and half-Afghan woman, and how this inside/outside perspective drew her to Victorian studies.  Chaozon Bauer and Aslami also discuss the ways in which some graduate programs are redesigning curriculum to include classes that center on questions of race (at Michigan State, for example, graduate students will soon be required to take a "Race, Gender and the Human" course), and the importance of collaborating on such initiatives with colleagues in and outside of their field as well as with undergraduate and graduate students, all of whom share the same vision for a more antiracist future for higher education.</p>
+						<p>Chaozon Bauer interviews Zarena Aslami, Associate Professor of 19th-Century British Literature and Culture at Michigan State University.  Their conversation focuses around the importance of collaboration with regard to research projects, and, more importantly, on how best to support and serve not only their students but colleagues as well.  Aslami begins by sharing her experience as an insider/outsider, as a half-white and half-Afghan woman, and how this inside/outside perspective drew her to Victorian studies.  Chaozon Bauer and Aslami also discuss the ways in which some graduate programs are redesigning curriculum to include classes that center on questions of race (at Michigan State, for example, graduate students will soon be required to take a "Race, Gender and the Human" course), and the importance of collaborating on such initiatives with colleagues in and outside of their field as well as with undergraduate and graduate students, all of whom share the same vision for a more antiracist future for higher education.</p>
 					</summary>
 
 					<section aria-labelledby="series">
@@ -96,7 +96,7 @@
 
 					<section aria-labelledby="biography">
 						<h3 id="biography">Guest Biography</h3>
-						<p>Zarena Aslami is Associate Professor in the Department of English at Michigan Start University. She is the author of <em>The Dream Life of Citizens: Late Victorian Novels and the Fantasy of the State</em> and is currently working on a book project that examines nineteenth-century British representations of Afghanistan. </p>
+						<p>Zarena Aslami is Associate Professor in the Department of English at Michigan State University. She is the author of <em>The Dream Life of Citizens: Late Victorian Novels and the Fantasy of the State</em> and is currently working on a book project that examines nineteenth-century British representations of Afghanistan. </p>
 					</section>
 
 					<section class="smaller" aria-labelledby="citation">
