--- a/html/lesson_plans/seacole_undisciplining_autobiography.html
+++ b/html/lesson_plans/seacole_undisciplining_autobiography.html
@@ -70,7 +70,7 @@
 
               <p><strong>Publication Date:</strong> 2021</p>
 							
-							<p><strong>Note:</strong> This page uses the Chicago Author-Date citation format for all textual references. All references also appear in the <a href="/html/about/bibliography.html">project bibliograpy</a> using the MLA citation format.</p>
+							<p><strong>Note:</strong> This page uses the Chicago Author-Date citation format for all textual references. All references also appear in the <a href="/html/about/bibliography.html">project bibliography</a> using the MLA citation format.</p>
 						</div>
 					</section>
 
