--- a/html/lesson_plans/africa_ethiopianism.html
+++ b/html/lesson_plans/africa_ethiopianism.html
@@ -118,7 +118,7 @@
 							<p>Gouldsbury, [Henry] Cullen. <em>God’s Outpost</em>. Nash, 1907.<br/>
 								<span class="annotation">Written by a British South Africa Company administrator, this very early Rhodesian novel includes a subplot in which “an apostle of the Ethiopian Mission” attempts to organize a rebellion against white rule (271). The apostle’s argument is similar to that of the African leader of John Buchan’s <em>Prester John</em>, who describes “a picture of the overthrow of the alien, and the golden age which would dawn for the oppressed” (ch. 11): “To-day in this continent, we outnumber the white men by half a million to one, and once we learn to combine, nothing can withstand us. The land shall run red with blood, their blood. . . . [T]he day will come when we will deny them the franchise, and be ourselves a law unto ourselves” (Gouldsbury 269). <em>Note: <a href="https://english.asu.edu/content/melissa-free">Melissa Free</a> can provide excerpts from this hard-to-get novel.</em></span></p>
 
-							<p>Buchan, John. <a href="http://www.gutenberg.org/ebooks/611"><em>Prester John</em></a>. 1910. <em>Gutenberg</em>, 1996.<br/>
+							<p>Buchan, John. <a href="http://www.gutenberg.org/ebooks/611"><em>Prester John</em></a>. 1910. <em>Project Gutenberg</em>, 1996.<br/>
 								<span class="annotation">This adventure novel, written after Buchan spent two years as a colonial administrator in southern Africa, is narrated by Davie Crawfurd, a nineteen-year old Scotsman, who goes to work as a shopkeeper in a remote part of southern Africa. It takes its title, however, from John Laputa, a charismatic, American-educated, widely traveled Christian Zulu, who leads a large-scale, carefully coordinated indigenous rising. A “roving evangelist” who “talked Christianity to the mobs” and African nationalism to their leaders, Laputa takes the name “Prester John” from the mytho-historical Christian priest-king of Abyssinia (ch. 7). Representing both the threat of African nationalism and its futility, Laputa is a highly unusual figure in contemporary British writing.</span></p>
 
 							<p>Hayford, J. E. Casely. <a href="https://archive.org/details/ethiopiaunbounds00hayf"><em>Ethiopia Unbound: Studies in Race Emancipation</em></a>. C.M. Phillips, 1911.<br/>
@@ -151,7 +151,7 @@
 					<section aria-labelledby="caption">
 						<h3 id="caption">Header Image Caption</h3>
 
-						<p><a href="https://www.loc.gov/pictures/item/93505644/"><em>Baptism by John Chilembwe in Liberia or Malawi</em></a>. c.1900-15. Library of Congress Prints and Photographs Division, LOT 12573 &lsaquo;item&rsaquo; [P&P]. No known restrictions on publication.</p>
+						<p><a href="https://www.loc.gov/pictures/item/93505644/">Baptism by John Chilembwe in Liberia or Malawi</a>. c.1900-15. Library of Congress Prints and Photographs Division, LOT 12573 &lsaquo;item&rsaquo; [P&P]. No known restrictions on publication.</p>
 					</section>
 
 					<section class="smaller" aria-labelledby="citation">
