--- a/html/lesson_plans/africa_southern_africa.html
+++ b/html/lesson_plans/africa_southern_africa.html
@@ -105,7 +105,7 @@
           <section class="materials" aria-labelledby="materials">
 						<h3 id="materials">Suggested Materials *</h3>
 
-						<p class="small">* <em>Note: Items listed in chronological order in all the following sections.</em></p>
+						<p class="small center">* <em>Note: Items listed in chronological order in all the following sections.</em></p>
 
             <section aria-labelledby="materials-1">
               <h4 id="materials-1">Thomas Pringle</h4>
