--- a/html/lesson_plans/africa_ethiopianism.html
+++ b/html/lesson_plans/africa_ethiopianism.html
@@ -151,7 +151,7 @@
 					<section aria-labelledby="caption">
 						<h3 id="caption">Header Image Caption</h3>
 
-						<p><a href="https://www.loc.gov/pictures/item/93505644/">Baptism by John Chilembwe in Liberia or Malawi</a>. c.1900-15. Library of Congress Prints and Photographs Division, LOT 12573 &lsaquo;item&rsaquo; [P&P]. No known restrictions on publication.</p>
+						<p><a href="https://www.loc.gov/pictures/item/93505644/">Baptism by John Chilembwe in Liberia or Malawi</a>. c.1900-15. Library of Congress Prints and Photographs Division, LOT 12573 &lt;item&gt; [P&P]. No known restrictions on publication.</p>
 					</section>
 
 					<section class="smaller" aria-labelledby="citation">
