--- a/html/syllabi/unsettling_victorian.html
+++ b/html/syllabi/unsettling_victorian.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8"/>
     <title>Unsettling Victorian Literature | Undisciplining the Victorian Classroom</title>
-		<meta name="description" content="."/><!-- Change; 160 char max -->
+		<meta name="description" content=" Decolonizes the teaching of Victorian literature through theoretical frameworks from Indigenous, Settler Colonial, Postcolonial, and Ecocritical Studies."/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta name="robots" content="index, follow"/>
 		<meta name="theme-color" content="#395375"/>
