update seacole lps for corrections

--- a/html/lesson_plans/seacole_caribbean_introduction.html
+++ b/html/lesson_plans/seacole_caribbean_introduction.html
@@ -99,7 +99,7 @@
 							<ul>
 								<li>“<a href="/html/lesson_plans/seacole_decentering_britishness.html">Decentering Britishness</a>” (Kira Braham) is designed to foreground conversations about Seacole’s complex positioning as a colonial subject of color and to encourage critical discourse about “Britishness” (or “Englishness”) as an identity category.</li>
 								
-								<li>“<a href="/html/lesson_plans/seacole_undisciplining_autobiography.html">Undisciplining Victorian Autobiography</a>” (Heidi Kaufman) situates Mary Seacole’s <em>Wonderful</em> <em>Adventures of Mrs. Seacole </em>within the context of Victorian and postcolonial autobiographical writing, and foregrounds two complicating features of Seacole’s work: her identity as a woman and as an Afro-Caribbean writer.</li>
+								<li>“<a href="/html/lesson_plans/seacole_undisciplining_autobiography.html">Undisciplining Victorian Autobiography</a>” (Heidi Kaufman) situates Mary Seacole’s <em>Wonderful</em> <em>Adventures of Mrs. Seacole </em>within the context of Victorian and postcolonial autobiographical writing and foregrounds two complicating features of Seacole’s work: her identity as a woman and as an Afro-Caribbean writer.</li>
 
 								<li>“<a href="/html/lesson_plans/seacole_recentering_nursing.html">Recentering Nursing in Wartime</a>” (Indu Ohri) offers students an expansive look at the professionalization of female nursing in British, transatlantic, and transnational combat zones, specifically those of the Crimean War (1853-56) and The American Civil War (1861-65).</li>
 
